# rust-vm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.claude/: settings.local.json
.cursor/rules/: rust.mdc  rust_guide.md
.github/workflows/: ci.yml
crates/aos/: Cargo.toml  README.md
crates/aos/src/: lib.rs
crates/avm/: Cargo.toml  README.md
crates/avm/src/: avm.rs  execution_context.rs  global.rs  host_interface.rs  lib.rs  memory_page_manager.rs  metering.rs  receipt.rs  router.rs  transaction.rs
crates/avm/src/memory/: memory_page.rs  memory_page_manager.rs  mod.rs
crates/avm/tests/: allocator_test.rs  memory_page_offset.rs  program_exec.rs  spec_runner.rs  test_syscall_handler.rs  tests.rs
crates/bootloader/src/: bootloader.rs  lib.rs  syscalls.rs
crates/bootloader/src/memory/: memory.rs  memory_page.rs  mod.rs  pte.rs
crates/bootloader/tests/: allocator_test.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/scripts/: compile.sh  linker.ld
crates/compiler/src/: abi.rs  abi_codegen.rs  abi_generator.rs  elf.rs  lib.rs
crates/compiler/targets/: avm32.json
crates/compiler/tests/: abi_generator_tests.rs
crates/contract_std/: Cargo.toml
crates/contract_std/src/: lib.rs
crates/examples/: .gitignore  Cargo.toml  Makefile  README.md  generate_abis.sh  linker.ld
crates/examples/src/: allocator_demo.rs  calculator.rs  calculator_client.rs  call_program.rs  dex.rs  ecdsa_verify.rs  erc20.rs  lib_import.rs  logging.rs  multi_func.rs  native_transfer.rs  simple.rs  storage.rs
crates/examples/tests/: binary_comparison_test.rs  ecdsa_payload_test.rs  elfs.rs  examples_test.rs  program_exec.rs  tests.rs
crates/examples/tests/common/: ecdsa.rs  ecdsa_test_data.rs  router.rs  state.rs  test_runner.rs  utils.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: bundle.rs  config.rs  create_account.rs  global.rs  init.rs  launch.rs  lib.rs  main.rs  mmu.rs  program_call.rs  syscall.rs  task.rs  trap.rs
crates/kernel/src/syscall/: alloc.rs  mod.rs  panic.rs
crates/kernel/src/task/: mod.rs  prep.rs  run.rs  task.rs
crates/os/: Cargo.toml  README.md
crates/os/src/: allocator.rs  bootloader.rs  kernel.rs  lib.rs  syscalls.rs  traps.rs
crates/os/src/memory/: memory_page.rs  stacked_memory.rs
crates/os/tests/: allocator_test.rs  memory_page_offset.rs
crates/program/: Cargo.toml
crates/program/src/: address.rs  allocator.rs  call.rs  call_contract.rs  call_program.rs  config.rs  ecdsa.rs  entrypoint.rs  event.rs  integers.rs  kernel.rs  lib.rs  log.rs  panic.rs  parser.rs  pubkey.rs  result.rs  router.rs  storage.rs  storage_map.rs  transfer.rs
crates/program/tests/: ecdsa_test.rs  router.rs
crates/state/: Cargo.toml
crates/state/src/: account.rs  lib.rs  state.rs  types.rs
crates/state/tests/: state_codec.rs
crates/storage/src/: lib.rs
crates/types/src/: address.rs  boot.rs  lib.rs  mmu.rs  o.rs  primitives.rs  result.rs  transaction.rs
crates/vm/: Cargo.toml
crates/vm/src/: context.rs  cpu.rs  decoder.rs  exe.rs  execution_context.rs  global.rs  host_interface.rs  instruction.rs  isa.rs  isa_compressed.rs  lib.rs  memory.rs  memory_page.rs  metering.rs  registers.rs  registries.rs  runner.rs  storage.rs  sys_call.rs  transaction.rs  vm.rs
crates/vm/src/memory/: mod.rs  sv32.rs
crates/vm/tests/: .gitignore  Makefile  README.md  allocator_test.rs  exec.rs  memory_page_offset.rs  program_exec.rs  spec_runner.rs  test_syscall_handler.rs
crates/vm/tests/programs/: .gitignore  Makefile  multi_func.rs  simple.rs  simple_flow_control.rs  storage.rs
crates/vm/tests/test-runner/: Cargo.toml
crates/vm/tests/test-runner/src/: main.rs
utils/: .gitignore
utils/binary_comparison/: Cargo.toml  Makefile  README.md
utils/binary_comparison/src/: comparison.rs  elf_instructions.rs  log_parser.rs  main.rs
