[package]
name = "avm"
version = "0.1.0"
edition = "2024"

[dependencies]
compiler = { path = "../compiler" }  # adjust path as needed
state = { path = "../state" }  # adjust path as needed
storage = { path = "../storage" }  # adjust path as needed
vm = { path = "../vm" }  # adjust path as needed
types = { path = "../types" }  # adjust path as needed
once_cell = "1.19.0"