[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
program = { path = "../program" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

[[bin]]
name = "call_program"
path = "src/call_program.rs"

[[bin]]
name = "multi_func"
path = "src/multi_func.rs"

[[bin]]
name = "erc20"
path = "src/erc20.rs"