[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
guest_kernel = []

[dependencies]
program = { path = "../program" }
types = { path = "../types" }
state = { path = "../state" }

[[bin]]
name = "kernel"
path = "src/main.rs"
required-features = ["guest_kernel"]
