[package]
name = "vm"
version = "0.1.0"
authors = ["Alon Muroch <alonmuroch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state" }  # adjust path as needed
storage = { path = "../storage" }  # adjust path as needed
hex = "0.4"