[package]
name = "binary_comparison"
version = "0.1.0"
edition = "2021"

# Make this a standalone package
[workspace]

[[bin]]
name = "binary_comparison"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
hex = "0.4"
anyhow = "1.0"
colored = "2.0"

# Use existing crates from the project
compiler = { path = "../../crates/compiler" }
vm = { path = "../../crates/vm" }